# BattleBay_tool_v2.0

./: CMakeLists.txt  README.md  main.cpp
Training_data/: ballpark_mortar_training.csv  bandage_training.csv  big_berta_training.csv  big_shield_training.csv  big_torpedo_training.csv  blast_cannon_training.csv  bloster_armor_training.csv  carronade_training.csv  cleanse_pulse_training.csv  defence_aura_training.csv  defence_wall_training.csv  duct_tape_training.csv  explosive_canon_training.csv  fire_bomb_training.csv  flare_gun_training.csv  frost_blaster_training.csv  frost_launcher_training.csv  galting_gun_training.csv  grenade_launcher_training.csv  long_range_mortar_training.csv  mine_training.csv  missile_launcher_training.csv  napalm_launcher_training.csv  nitro_training.csv  overboost_training.csv  railgun_training.csv  repair_bolt_training.csv  repair_box_launcher_training.csv  repair_plasma_training.csv  repair_pulse_training.csv  sniper_cannon_training.csv  standard_cannon_training.csv  standard_mortar_training.csv  standard_shield_training.csv  standard_torpedo_training.csv  tesla_bolt_training.csv  tesla_shield_training.csv  triple_torpedo_training.csv  turbo_training.csv
Weapons_data/: ballpark_mortar_common.csv  ballpark_mortar_epic.csv  ballpark_mortar_legendary.csv  ballpark_mortar_rare.csv  ballpark_mortar_uncommon.csv  bandage_common.csv  bandage_epic.csv  bandage_legendary.csv  bandage_rare.csv  bandage_uncommon.csv  big_bandage_common.csv  big_bandage_epic.csv  big_bandage_legendary.csv  big_bandage_rare.csv  big_bandage_uncommon.csv  (+195 more)
(+189 files in other folders)
